@@ -1,3 +1,5 @@
+2006/1/14 -- released version 20060114_trunk
+
 2006/1/13 -- released version 20060113_trunk
 
 2006/1/12 -- released version 20060112_trunk
